# shopify-psrestful

./: README.md  pyproject.toml  tox.ini
src/shopify_psrestful/: cli.py  client.py  domain.py  inventory.py  metafields.py  products.py  ps_client.py  ps_services.py  settings.py
